@@ -3,8 +3,11 @@
 	* libgphoto2/gphoto2-filesys.c
 
 	  Got rid of most LRU heuristics, simplified to just store
-	  the last 2 full datastreams. This should be fully sufficient
-	  for 99.9% of all usecases (download images lineary).
+	  the last <n> full datastreams.
+	  This should be fully sufficient for 99.9% of all usecases
+	  (download images lineary).
+
+	  You can control this by the setting "libgphoto2" , "cached-images".
 
 2005-06-27  Hubert Figuiere  <hfiguiere@teaser.fr>
 
